# snakedown

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  benchmark-config.toml  contributing.html  index.html  installation.html  introduction.html  justfile  pixi.toml  print.html  searcher-c2a407aa.js  searchindex-767a5e80.js  searchindex-8d4335c1.js  searchindex-a60c42dd.js  searchindex-c20dcb0b.js  searchindex.js  snakedown.example.toml  toc-6f6e8175.js  toc.html  toc.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml
.github/workflows/: book.yml  check.yml  release-plz.yml  test.yml
benches/: test_pkg.rs
config/: customisation.html  index.html  options.html
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  installation.md  introduction.md
src/: cli.rs  config.rs  fs.rs  lib.rs  main.rs
src/cli/: init.rs  mod.rs  verbosity.rs
src/indexing/: fetch.rs  index.rs  mod.rs  object_ref.rs
src/parsing/: class.rs  function.rs  links.rs  mod.rs  module.rs  utils.rs
src/render/: expr.rs  jupyter.rs  mod.rs
tests/: main.rs  test_pyproject.toml
tests/rendered_full/: foo.md  test_pkg._private.internals.InternalHelper.__init__.md  test_pkg._private.internals.InternalHelper.amplify.md  test_pkg._private.internals.InternalHelper.md  test_pkg._private.internals.InternalHelper.reset_factor.md  test_pkg._private.internals._double_value.md  test_pkg._private.internals.calculate_secret_value.md  test_pkg._private.internals.md  test_pkg.bar.Greeter.md  test_pkg.bar._format_name.md  test_pkg.bar.greet.md  test_pkg.bar.greet_undocumented.md  test_pkg.bar.md  test_pkg.foo._subtract.md  test_pkg.foo.add.md  test_pkg.foo.md  test_pkg.sub1.mid.Squarer.square_number.md  test_pkg.sub1.mid.square.md  test_pkg.sub1.sub2.one.is_even.md  test_pkg.sub1.sub2.one.is_odd.md  test_pkg.sub1.sub2.one.md  test_pkg.sub1.sub2.two.Counter.increment.md
tests/rendered_no_private/: foo.md  test_pkg.bar.Greeter.__init__.md  test_pkg.bar.Greeter.greet.md  test_pkg.bar.greet.md  test_pkg.bar.md  test_pkg.foo.md  (+8 more)
usage/: content.html  index.html  static-site-generators.html
(+28 files in other folders)
