[package]
name         = "snakedown"
version      = "0.2.1"
authors      = ["Sam Vente <savente93@proton.me>"]
edition      = "2024"
rust-version = "1.91"
description  = "This is a snakedown. Hand over your docs, nice and clean, and nobody gets confused."
readme       = "README.md"
license      = "MIT"

documentation = "https://docs.rs/snakedown"
repository    = "https://github.com/savente93/snakedown"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "snakedown"

[dependencies]
clap                = { version = "4", features = ["derive", "unicode", "cargo"] }
clap-verbosity-flag = { version = "3.0.3", features = ["tracing"] }
color-eyre          = "0.6"
flate2              = "1.1.2"

lazy-regex        = "3.4.1"
pyproject-toml    = "0.13.7"
reqwest           = { version = "0.12.20", features = ["blocking"] }
rustpython-parser = "0.4.0"

serde = { version = "1", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tera  = "1.20.1"

tokio = { version = "1.45", features = [
  "rt",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "time",
  "process",
  "macros",
  "fs",
  "parking_lot",
  "sync",
] }

toml               = "0.9.2"
tracing            = { version = "0", features = ["attributes"] }
tracing-error      = "0"
tracing-subscriber = "0"
url                = "2.5.4"
walkdir            = "2.5.0"

[dev-dependencies]
assert_cmd        = "2.0.17"
assert_fs         = "1.1.3"
pretty_assertions = "1"
tempfile          = "3.20.0"
tracing-test      = "0.2.5"

# please tell me what to do Clippy-senpai
[lints.clippy]
single_match               = "warn"
single_match_else          = "warn"
needless_match             = "warn"
needless_late_init         = "warn"
redundant_pattern_matching = "warn"
redundant_pattern          = "warn"
redundant_guards           = "warn"
collapsible_match          = "warn"
match_single_binding       = "warn"
match_same_arms            = "warn"
match_ref_pats             = "warn"
match_bool                 = "warn"
needless_bool              = "deny"
unwrap_used                = "warn"
expect_used                = "warn"
